grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.sort_tags: "semver"
        diun.max_tags: "2"
        diun.include_tags: '^[0-9]+\.[0-9]+\.[0-9]+-[0-9]+$'
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - image: grafana/grafana-oss:12.2.0-17142428006
          name: grafana
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
            - name: config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-lh
        - name: config
          secret:
            secretName: config
