grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
  - hosts:
    - grafana.home.jutonz.com
    secretName: grafana-tls
  rules:
  - host: grafana.home.jutonz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3001
